--- a/src/utils/scss/_colors.scss
+++ b/src/utils/scss/_colors.scss
@@ -1,5 +1,8 @@
 $green: #2d5f4d;
+$green2: #347a45;
+$light-green: #48a75f;
 $orange: #f7c35f;
+$dark-orange: #fba500;
 $white: #ffffff;
-$grey: #797979;
+$grey: #6e7673;
 $light-grey: #edece9;
