--- a/src/utils/scss/_typography.scss
+++ b/src/utils/scss/_typography.scss
@@ -1,11 +1,13 @@
 // Imports
 
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 
 // Font families
 
 $dosis: "Dosis";
 $poppins: "Poppins";
+$kalam: "Kalam";
 
 // Font weights
 
