--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -27,8 +27,7 @@
 
 .section1 {
   .color {
-    background-color: $light-grey;
-    // background-color: $orange;
+    background-color: $white;
     max-width: 100%;
     height: 526px;
     position: relative;
@@ -108,19 +107,14 @@
 
     & .body-content {
       display: flex;
-      // justify-content: space-between;
-      // align-items: center;
       margin: 0 100px 0 100px;
       gap: 50px;
 
       .left {
         margin-top: 20px;
-        width: 724px;
-        height: 736px;
-        // width: 500px;
-        // height: 400px;
+        width: 624px;
+        height: auto;
         border-radius: 20px;
-        // left: 140px;
       }
 
       .right {
@@ -128,7 +122,6 @@
         margin-top: 20px;
         display: flex;
         flex-direction: column;
-        // align-items: center;
         margin-left: 40px;
 
         .logo-text {
@@ -188,6 +181,7 @@
         }
 
         button {
+          margin-top: 40px;
           width: 217px;
           height: 70px;
           color: $white;
