--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -47,7 +47,7 @@
     background-color: $orange;
   }
 
-  .box {
+  & .box {
     width: 358px;
     height: 373px;
     background-color: white;
@@ -193,5 +193,62 @@
         }
       }
     }
+  }
+}
+
+.section3 {
+  max-width: 100%;
+  height: auto;
+  background-color: $light-grey;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  justify-content: space-between;
+
+  .top {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .bottom {
+    margin: 0 20px 0 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+
+    .bottom-box {
+      background-color: $white;
+      width: 274px;
+      height: 391px;
+    }
+    .wrapper-box {
+      width: 274px;
+      height: 235px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .wrapper-box-title {
+        // display: flex;
+        // align-items: center;
+        // flex-direction: column;
+        // text-align: center;
+      }
+    }
+  }
+
+  & h3 {
+    color: $green2;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  & h2 {
+    color: $green2;
+    font-size: 32px;
+    font-weight: bold;
   }
 }
