--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -21,8 +21,10 @@ nav {
     height: 59px;
     color: $grey;
     background-color: $dark-orange;
+    border: none;
     border-radius: 10px;
     box-shadow: none;
+    cursor: pointer;
     font-size: 16px;
     font-weight: bold;
   }
